# n8n-workflow-manager

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
docs/: API_REFERENCE.md  ARCHITECTURE.md  BACH_INTEGRATION.md  N8N_WORKFLOW_FORMAT.md
n8nManager/: __init__.py  __main__.py  config.json  n8n_manager.py
n8nManager/api/: routes_servers.py  routes_sync.py  routes_templates.py  routes_workflows.py  server.py
n8nManager/core/: config.py  database.py  n8n_client.py  workflow_builder.py  workflow_parser.py
n8nManager/data/: n8n_manager.db
n8nManager/export/: bach_export.py  json_export.py  markdown.py
n8nManager/setup/: n8n_installer.py  ssh_helper.py
n8nManager/templates/: daily_report.json  email_monitor.json  rechnungsimport.json
n8nManager/web/static/css/: style.css
n8nManager/web/static/js/: api_client.js  graph_renderer.js  workflow_editor.js
n8nManager/web/templates/: base.html  creator.html  dashboard.html  editor.html  import.html  servers.html  viewer.html
